-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Querying
-
Fully Compatible
-
ALL
-
Query 2017-05-08
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The correct derived class destructor is not invoked due to the absence of a virtual destructor in the base class
Defect 101500 (STATIC_C)
Checker VIRTUAL_DTOR (subcategory none)
File: /src/mongo/db/update/update_object_node.h
Function mongo::UpdateObjectNode::~UpdateObjectNode()
/src/mongo/db/update/update_object_node.h, line: 41
Class "mongo::UpdateObjectNode" has a destructor and a pointer to it is upcast to class "mongo::UpdateNode" which doesn't have a virtual destructor.
class UpdateObjectNode : public UpdateNode {