SERVER-28904 UpdateNode should have a virtual destructor